# Results-Streamlit

./: main.py  pyproject.toml
OLD/: main_OLD.py
OLD/results_OLD/deep/interpolation/: results_cwru_12000.csv  results_cwru_48000.csv  results_ims.csv  results_mfpt_48828.csv  results_mfpt_97656.csv  results_uoc.csv
results/deep/default/biased/: results_ims.csv  results_mfpt_48828.csv  results_xjtu.csv
results/deep/default/biased_mirrored/: results_mfpt_48828.csv  results_uoc.csv  results_xjtu.csv
results/deep/default/biased_usual/: results_mfpt_48828.csv  results_xjtu.csv
results/deep/default/unbiased/: results_ims.csv  results_mfpt_48828.csv  results_mfpt_97656.csv  results_uoc.csv  results_xjtu.csv
results/deep/interpolation/: results_eas.csv
results/ml/1nn/biased_mirrored/: cwru_12000.csv  cwru_12000.json  cwru_48000.csv  cwru_48000.json  ims.csv  ims.json  mafaulda.json  mfpt_48828.csv  mfpt_97656.csv  mfpt_97656.json  pu.csv  uoc.csv  uoc.json  xjtu.csv
results/ml/1nn/biased_usual/: cwru_12000.csv  cwru_12000.json  cwru_48000.csv  cwru_48000.json  ims.csv  mfpt_48828.csv  mfpt_97656.csv  pu.csv  pu.json  uoc.csv  xjtu.csv
results/ml/1nn/unbiased/: cwru_12000.csv  cwru_12000.json  cwru_48000.csv  ims.csv  ims.json  mfpt_48828.csv  (+6 more)
results/ml/biased/: CWRU_48000.json  EAS.json  MAFAULDA.json  cwru_12000.json  ims.json  mfpt_48828.json
results/ml/unbiased/: CWRU_12000.json  EAS.json  PU.json
results/unbiased/: results_cwru_48000.csv  results_eas.csv  results_mfpt_48828.csv
results_OLD/deep/interpolation/: results_pu.csv
utilities/: save_table.py
(+66 files in other folders)
