[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Lucas Gabriel <lucasgabriiel.oliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
